--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <p></p> This is a paragraph test</p>
 
-<img src = "C:\Users\mateu\Desktop\orange.jpeg"/>
+<img src = "C:\Users\mateu\Desktop\tiger.jpg"/>
 </center>
 
 
