--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <center>
   <h1> Hi there </h1>
   
-  <p></p> This is a paragraph test</p>
+  <p> This is a paragraph test</p>
 
 <img src = "https://images.unsplash.com/photo-1629478787296-892014f57263?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"/>
 </center>
